--- a/index.css
+++ b/index.css
@@ -109,11 +109,13 @@ h2{
 
 footer{
   text-align: center;
+  margin-top: 2em;
 }
 
 footer a{
   text-decoration: none;
   color: #000;
+  font-size: 1.5rem;
 }
 
 footer i:nth-child(1){
@@ -164,7 +166,4 @@ footer i:nth-child(1){
   .chedar1,.chedar2,.chedar3, .cebolla, .lechuga,.carne1,.carne2{
     width: 520px;
   }
-
-
 }
-
